# Chat-Switcher

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  listener.py  main.py  tests.py
app/services/: __init__.py  discord.py  exceptions.py  interface.py  telegram.py
app/services/discord/: chat_transport.py
app/services/listener/: service.py
app/services/telegram/: chat_transport.py  exceptions.py
