[tool.poetry]
name = "chattransporter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
pyright = "^1.1.355"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
ruff = "^0.3.4"
discord-py = "^2.3.2"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
